--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "react": "19.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
     "tailwind-merge": "^3.4.0",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
