--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,10 @@ CLOUDFLARE_R2_PUBLIC_DOMAIN=https://your-public-r2-domain.com
 APIFY_TOKEN=your_apify_token
 IMAGGA_API_KEY=your_imagga_key
 IMAGGA_API_SECRET=your_imagga_secret
-GEMINI_API_KEY=your_gemini_api_key
+LLM=openai # or ollama
+OPENAI_API_KEY=your_openai_api_key
+OPENAI_MODEL=gpt-3.5-turbo
+
+# Ollama (used when LLM=ollama)
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.1
