--- a/.env.example
+++ b/.env.example
@@ -8,11 +8,9 @@ CLOUDFLARE_R2_SECRET_ACCESS_KEY=your_r2_secret_access_key
 CLOUDFLARE_R2_BUCKET_NAME=your_bucket_name
 CLOUDFLARE_R2_PUBLIC_DOMAIN=https://your-public-r2-domain.com
 
-# AI enrichment (optional, enable features if provided)
-APIFY_TOKEN=your_apify_token
 IMAGGA_API_KEY=your_imagga_key
 IMAGGA_API_SECRET=your_imagga_secret
-LLM=openai # or ollama
+LLM=openai
 OPENAI_API_KEY=your_openai_api_key
 OPENAI_MODEL=gpt-3.5-turbo
 
