--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "isomorphic-dompurify": "^2.34.0",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
+    "puppeteer": "^24.34.0",
     "react": "19.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "19.2.0",
